--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 5fr 1fr;
+}
+.header{
+  height: 100px;
+  border: 1px solid green;
+}
+.content{
+  border: 1px solid black;
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-auto-rows: 1fr;
+}
+.footer{
+  border: 1px solid red;
+}
